<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱打勾</string>
    <string name="action_settings">Settings</string>
	<string name="loading">正在加载...</string>
    <string name="image_description">图片</string>
    <string name="login">登录</string>
    <string name="login_sms_info">获取验证码</string>
    <string name="hint_login_name">用户名</string>
    <string name="hint_login_pwd">密码</string>
    <string name="register">注册</string>
    <string name="retpwd">找回密码</string>
    <string name="reset_pwd">忘记密码</string>
    <string name="submit">提交</string>
    <string name="pay">支付宝支付</string>
    <string name="set_time_location">设置时间和地点</string>
    <string name="logout">退出登录</string>
    <string name="evaluation">评价</string>
    <string name="ready">好了</string>
    <string name="tab_ongoing">进行中</string>
    <string name="tab_finish">已结束</string>
    <string name="apponint">预约</string>
    <string name="detail">查看详情</string>
    <string name="cancel_order">取消订单</string>
    <string name="next_step">下一步</string>
    
    <string name="login_msg1">手机号不能为空</string>
    <string name="login_msg2">无效的手机号</string>
    
    <string name="hint_register_name_view">请输入用户名</string>
    <string name="hint_register_pwd_view">请输入密码</string>
    <string name="hint_register_tel_view">请输入手机号</string>
    <string name="hint_register_sms_view">请输入手机验证码</string>
	
    
</resources>
