<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="欢迎登陆爱打勾留学"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height" >

        <EditText
            android:id="@+id/login_name_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:hint="@string/hint_login_name"
            android:paddingLeft="50dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/image_description" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height" >

        <EditText
            android:id="@+id/login_sms_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:inputType="textPassword"
            android:hint="@string/hint_login_pwd"
            android:paddingLeft="50dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/image_description" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/login"
        android:textColor="@color/white" />
    
    <TextView android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/register"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="18sp"/>
    
    <TextView android:id="@+id/tv_reset_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/reset_pwd"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textSize="18sp"/>

</LinearLayout>