<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_app"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_description"
        android:src="@drawable/ic_login_drop" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_marginTop="30dp" >

        <EditText
            android:id="@+id/register_name_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@drawable/bg_login"
            android:gravity="center_vertical"
            android:hint="@string/hint_register_name_view"
            android:paddingLeft="50dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/image_description" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_marginTop="40dp" >

        <EditText
            android:id="@+id/register_pwd_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@drawable/bg_login"
            android:gravity="center_vertical"
            android:hint="@string/hint_register_pwd_view"
            android:paddingLeft="50dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/image_description" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_marginTop="40dp" >

        <EditText
            android:id="@+id/register_tel_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@drawable/bg_login"
            android:gravity="center_vertical"
            android:hint="@string/hint_register_tel_view"
            android:paddingLeft="50dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/image_description" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_height"
        android:layout_marginTop="40dp" >

        <EditText
            android:id="@+id/register_sms_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_bar_height"
            android:background="@drawable/bg_login"
            android:gravity="center_vertical"
            android:hint="@string/hint_register_sms_view"
            android:paddingLeft="50dp"
            android:textColor="@color/gray"
            android:textColorHint="@color/text_hint_color"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sms_code_view"
            android:layout_width="72dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/bg_sms_enable_corners"
            android:gravity="center"
            android:text="@string/login_sms_info"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:contentDescription="@string/image_description" />
    </RelativeLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:background="#3fecd9"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>