<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_detail_radiogroup_height" >

        <View
            android:id="@+id/top_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dbdbdb" />

        <RadioGroup
            android:id="@+id/about_rb_tab"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_below="@+id/top_line"
            android:orientation="horizontal" >


            <RadioButton
                android:id="@+id/tab1_btn_view"
                style="@style/rb_tab_text"
                android:text="@string/tab_ongoing" />

            <RadioButton
                android:id="@+id/tab2_btn_view"
                style="@style/rb_tab_text"
                android:text="@string/tab_finish" />
        </RadioGroup>

        <View
            android:id="@+id/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="#dbdbdb" />

        <ImageView
            android:id="@+id/cursor_view"
            style="@style/tab_bar"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/image_description" />
    </RelativeLayout>

    <com.idogoo.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:persistentDrawingCache="animation" >
    </com.idogoo.widget.ViewPager>

</LinearLayout>