<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.idogoo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.idogoo.cardview.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <com.idogoo.widget.CircleImageView
                    android:id="@+id/iv_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/image_description"
                    android:maxHeight="54dp"
                    android:maxWidth="54dp"
                    android:src="@drawable/ic_launcher"
                    app:drawBorder="false" />

                <TextView
                    android:id="@+id/tv_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:text="用户名" >
                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_topic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="用户名" >
            </TextView>

            <TextView
                android:id="@+id/tv_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="用户名" >
            </TextView>

            <LinearLayout
                android:id="@+id/btn_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_bottom_left_corners_n"
                    android:text="@string/detail"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/btn_cancel_order"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/bg_bottom_right_corners_n"
                    android:text="@string/cancel_order"
                    android:textColor="@color/white" />
            </LinearLayout>
            
            <Button 
                android:visibility="gone"
                android:id="@+id/btn_ready_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:text="@string/detail"
                android:textColor="@color/white"
                android:background="@drawable/bg_bottom_left_right_corners_n"/>
        </LinearLayout>
    </com.idogoo.cardview.CardView>

</LinearLayout>